@@ -1,33 +1,0 @@
-#!/bin/sh
-
-GTKDIALOG=gtkdialog
-
-export MAIN_DIALOG='
-<vbox>
-  <frame Label from file>
-    <text>
-      <label>This is a static text.</label>
-      <input file>/etc/hosts.allow</input>
-    </text>
-  </frame>
-  <frame Label from command>
-    <text>
-      <label>This is a static text.</label>
-      <input>date</input>
-      <variable>DATE</variable>
-    </text>
-    <hbox>
-      <button>
-        <label>refresh</label>
-        <action type="refresh">DATE</action>
-      </button>
-    </hbox>
-  </frame>
-  <hbox>
-    <button ok></button>
-    <button cancel></button>
-  </hbox>
-</vbox>
-'
-
-$GTKDIALOG --program=MAIN_DIALOG
